overflow-x fixed in header file

--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -1,7 +1,8 @@
 header{
     width: 100%;
     height: auto;
-    overflow: hidden;
+    // overflow: hidden;
+    overflow-x: hidden;
 }
 
 .header-container{
